# aporic

./: .gitignore  AGENT.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
docs/superpowers/plans/: 2026-07-22-tutor-onboarding.md
docs/superpowers/specs/: 2026-07-22-tutor-onboarding-design.md
src/: db.rs  domain.rs  json.rs  main.rs  nsh.rs  obsidian.rs  tui.rs  tutor.rs
tests/: cli_startup.rs
