[package]
name = "aporic"
version = "0.3.0"
edition = "2021"
default-run = "aporic"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
chrono = "0.4"

[[bin]]
name = "aporic"
path = "src/main.rs"

[[bin]]
name = "nsh"
path = "src/nsh.rs"
