[package]
name = "aporic"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
chrono = "0.4"
ratatui = "0.30.2"
crossterm = "0.29.0"
shell-words = "1.1.1"

[[bin]]
name = "aporic"
path = "src/main.rs"
